# programming-bitcoin-scratch-from

./: Cargo.toml  ReadMe.md
basic_bitcoin/: Cargo.toml
basic_bitcoin/docs/: smart_contract.md  soft_fork.md
basic_bitcoin/src/: main.rs
basic_bitcoin/src/models/: block.rs  bloomfilter.rs  ecc.rs  ecc_with_extrnal_crate.rs  helper.rs  merkleblock.rs  mod.rs  network.rs  op.rs  script.rs  script_test1.txt  script_test2.txt  test.rs  tx.rs
basic_bitcoin/src/secp256k1/: field_element.rs  finite_field_point.rs  mod.rs  normal_point.rs  point.rs  test.rs
big_uint/: Cargo.toml
big_uint/src/secp256k1/: field_element.rs  mod.rs  point.rs
