[package]
name = "basic_bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version ="0.27.0", features = ["rand-std"]}
rand = "0.8.5"
num = "0.4.0"
num-traits = "0.2.15"
num-bigint = "0.4"
serde = {version = "1.0.169", features = ["derive"]}
sha1 = "0.10.5"
sha2 = "0.10.7"
hex = "0.4.3"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["blocking"]}
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
byteorder = "1.4.3"
ripemd = "0.1.3"
log = "0.4.19"
lazy_static = "1.4.0"
k256 = "0.13.1"
elliptic-curve = "0.13.5"
digest = "0.9.0"
